shh work